// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits has formated trait link text with \`\${context}\` inside a span based on \`\${sourceType}\` 1`] = `
<Link
  href="#"
>
  <Add
    className={undefined}
    size="XS"
  />
  <span
    className={undefined}
  >
    Create Rule-Based Trait
  </span>
</Link>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits has formated trait link text with \`\${context}\` inside a span based on \`\${sourceType}\` 2`] = `
<Link
  href="#"
>
  <Add
    className={undefined}
    size="XS"
  />
  <span
    className={undefined}
  >
    Create Onboarded Trait
  </span>
</Link>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits has formated trait link text with \`\${context}\` inside a span based on \`\${sourceType}\` 3`] = `
<Link
  href="#"
>
  <Add
    className={undefined}
    size="XS"
  />
  <span
    className={undefined}
  >
    Create A Trait
  </span>
</Link>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits has formated trait link text with \`\${context}\` inside a span based on \`\${sourceType}\` 4`] = `
<Link
  href="#"
>
  <Add
    className={undefined}
    size="XS"
  />
  <span
    className={undefined}
  >
    Create A Trait
  </span>
</Link>
`;

exports[`<SignalsTable /> component Rendering cells renderKeyValuePairs should render one key-value pair as \`\${key}=\${value}\` inside a div 1`] = `
<div>
  <div>
    k=v
  </div>
</div>
`;

exports[`<SignalsTable /> component Rendering cells renderKeyValuePairs should render two key-value pairs on separate lines 1`] = `
<div>
  <div>
    k1=v1
  </div>
  <div>
    k2=v2
  </div>
</div>
`;

exports[`<SignalsTable /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalsTable
    results={
      Object {
        "list": Array [
          Object {
            "id": 0,
            "name": "test1",
            "percentageChange": 0.1234,
            "source": Object {
              "sourceType": "ANALYTICS",
            },
          },
          Object {
            "id": 1,
            "name": "test2",
            "percentageChange": -0.5678,
            "source": Object {
              "sourceType": "ONBOARDED",
            },
          },
        ],
      }
    }
    signalType="all"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "columns": Array [
        Object {
          "key": "keyValuePairs",
          "minWidth": 150,
          "title": "Key-Value Pair",
        },
        Object {
          "key": "signalType",
          "title": "Signal Type",
          "width": 140,
        },
        Object {
          "key": "signalSource",
          "title": "Signal Source",
          "width": 180,
        },
        Object {
          "key": "totalCounts",
          "title": "Total Counts",
          "width": 82,
        },
        Object {
          "key": "percentageChange",
          "title": "Percentage Change",
          "width": 165,
        },
        Object {
          "key": "includedInTraits",
          "title": "Included In Traits",
          "width": 150,
        },
      ],
      "items": Array [
        Object {
          "id": 0,
          "includedInTraits": Object {
            "keyValuePairs": undefined,
            "sids": undefined,
            "sourceType": "ANALYTICS",
          },
          "name": "test1",
          "percentageChange": 0.1234,
          "signalSource": undefined,
          "signalType": "Adobe Analytics",
          "source": Object {
            "sourceType": "ANALYTICS",
          },
        },
        Object {
          "id": 1,
          "includedInTraits": Object {
            "keyValuePairs": undefined,
            "sids": undefined,
            "sourceType": "ONBOARDED",
          },
          "name": "test2",
          "percentageChange": -0.5678,
          "signalSource": undefined,
          "signalType": "Onboarded Records",
          "source": Object {
            "sourceType": "ONBOARDED",
          },
        },
      ],
      "renderCell": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "columns": Array [
          Object {
            "key": "keyValuePairs",
            "minWidth": 150,
            "title": "Key-Value Pair",
          },
          Object {
            "key": "signalType",
            "title": "Signal Type",
            "width": 140,
          },
          Object {
            "key": "signalSource",
            "title": "Signal Source",
            "width": 180,
          },
          Object {
            "key": "totalCounts",
            "title": "Total Counts",
            "width": 82,
          },
          Object {
            "key": "percentageChange",
            "title": "Percentage Change",
            "width": 165,
          },
          Object {
            "key": "includedInTraits",
            "title": "Included In Traits",
            "width": 150,
          },
        ],
        "items": Array [
          Object {
            "id": 0,
            "includedInTraits": Object {
              "keyValuePairs": undefined,
              "sids": undefined,
              "sourceType": "ANALYTICS",
            },
            "name": "test1",
            "percentageChange": 0.1234,
            "signalSource": undefined,
            "signalType": "Adobe Analytics",
            "source": Object {
              "sourceType": "ANALYTICS",
            },
          },
          Object {
            "id": 1,
            "includedInTraits": Object {
              "keyValuePairs": undefined,
              "sids": undefined,
              "sourceType": "ONBOARDED",
            },
            "name": "test2",
            "percentageChange": -0.5678,
            "signalSource": undefined,
            "signalType": "Onboarded Records",
            "source": Object {
              "sourceType": "ONBOARDED",
            },
          },
        ],
        "renderCell": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
